@@ -83,6 +83,7 @@ android {
             jvmArgs += ['--add-opens', 'java.base/java.util=ALL-UNNAMED']
             jvmArgs += ['--add-opens', 'java.base/java.text=ALL-UNNAMED']
             jvmArgs += ['--add-opens', 'java.base/java.math=ALL-UNNAMED']
+            jvmArgs += ['--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED']
             jvmArgs += ['--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED']
             jvmArgs += ['--add-opens', 'java.base/java.lang.ref=ALL-UNNAMED']
         }
